# farmbros_server

./: .gitignore  CLAUDE.md  auth.py  convert_crops_to_json.py  database.py  decorators.py  main.py  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0235fb063a9a_add_yield_columns_to_crops_table.py  0e701b860cf4_updated_plot_table_removed_extra_columns.py  0ed609fe3f23_create_plot_types_tables_with_new_.py  1b9aac4afb44_moving_to_back_populates.py  21965d2de0d9_add_plot_type_id_relationship_to_plots_.py  27a7f546286e_add_google_id_column_to_users_table.py  2c47eab5e3d0_added_plot_model.py  351a5b98611f_create_farm_table.py  37a9fcd39324_add_planted_crop_table.py  51357963ae67_remove_extra_columns_in_plot.py  634b2241e941_added_logintype_enum.py  6484bfca6acf_add_crops_table.py  7a713c51dccc_update_plot_types_schema_to_match_.py  85b7ca03a162_create_farm_table_adds_relationship_for_.py  8bc7a440938a_moving_to_postgres.py  (+10 more)
assets/: cropV2.json
controllers/: animal_controller.py  animal_type_controller.py  crop_controller.py  farm_controller.py  planted_crop_controller.py  plot_controller.py  user_controller.py
docs/: README.md  animal-type-api.md  crop-api.md  farm-api.md  planted-crop-api.md  plot-api.md  user-api.md
models/: animal.py  animal_type.py  crop.py  farm.py  planted_crop.py  plot.py  plot_types.py  runner.py  user.py
routes/: animal_routes.py  animal_type_routes.py  crop_routes.py  farm_routes.py  planted_crop_routes.py  plot_routes.py  service_routes.py  user_routes.py
services/: caching.py  validators.py
